# multiplayer_bevy_k8s

./: .gitignore  Cargo.toml  Justfile  Makefile  README.md  server.Dockerfile
.github/: dependabot.yml
.github/workflows/: build.yml  release-container.yml
client/: Cargo.toml
client-2d/: Cargo.toml
client-2d/src/: main.rs
client/src/: main.rs
k8s/manifests/: loadbalancer-pool.yaml  multiplayer-game-service.yaml
server/: Cargo.toml
server/src/: main.rs
